# risk_qae

./: .gitignore  README.md  pyproject.toml
examples/: 01_synthetic_gamma_grover_mle.py  02_synthetic_mixture_tailstress_compare_ae_methods.py  03_real_dataset_template.py  README.md
scripts/: analyze_runs.py  run_one.py  sweep_study1_shots.sh  sweep_study2_segments.sh
scripts/archive/: analyze_runs.py  run_one.py  sweep.sh
src/risk_qae/: __init__.py  api.py  config.py  types.py
src/risk_qae/ae/: __init__.py  budgeted_ae.py  grover_mle.py  results.py
src/risk_qae/backends/: __init__.py  aer.py  factory.py  quantum_rings.py
src/risk_qae/circuits/: __init__.py  grover.py  indicator.py  problems.py  stateprep.py  value_encoding.py
src/risk_qae/discretization/: __init__.py  histogram.py
src/risk_qae/metrics/: __init__.py  classical.py  quantum.py
src/risk_qae/utils/: validation.py
tests/: conftest.py  test_stage1.py  test_stage2_imports.py  test_stage5_grover_mle_toy.py
