[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-qae"
version = "0.1.0"
description = "Risk metrics (mean, VaR, TVaR) with a shots-first amplitude-estimation architecture (Quantum Rings compatible via Qiskit primitives)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nick Valverde" }]
keywords = ["risk", "VaR", "TVaR", "amplitude estimation", "qiskit", "quantum"]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
qiskit = [
  "qiskit>=1.0",
  "qiskit-algorithms>=0.3.0",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
